compiler/testData/diagnostics/tests/subtyping/memberAnonymousObjects.kt
class Test {
    private var x = object {};
    {
        x = <!TYPE_MISMATCH!>object<!> {}
    }
}